# semi-X-project

./: .gitignore  README.md  pyproject.toml
social_media/home/: admin.py  models.py  urls.py  views.py
social_media/home/migrations/: 0001_initial.py  0002_initial.py
social_media/home/templates/home/: comment_tree.html  home.html  post_detail.html
social_media/templates/: base.html
social_media/user_profile/: forms.py  models.py  urls.py  views.py
social_media/user_profile/migrations/: 0001_initial.py
social_media/user_profile/templates/user_profile/: dashboard.html  edit_profile.html  signin.html  signup.html  user_profile_page.html
social_media/x/: settings.py  urls.py
